--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -520,10 +520,11 @@ jobs:
 
       - name: generate manifest
         run: |
-          manifest generate "${{ needs.setup_variables.outputs.app }}" "0.0.1-${{github.sha}}-manifestv2" \ 
+          manifest generate \ 
             --set "image.repository=${{secrets.chartmuseum-url}}/${{ needs.setup_variables.outputs.app }}" \
             --set "image.tag=${{ needs.setup_variables.outputs.imagetag }}" \
             --home "$GITHUB_SERVER_URL/$GITHUB_REPOSITORY" \
+            "${{ needs.setup_variables.outputs.app }}" "0.0.1-${{github.sha}}-manifestv2" \
           && helmpush chart "${{secrets.chartmuseum-url}}" --version "0.0.1-${{github.sha}}-manifestv2"
 
   # testofskip:
