chg:adjust manifest generate argument and options

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -520,11 +520,7 @@ jobs:
 
       - name: generate manifest
         run: |
-          manifest generate \ 
-            "${{ needs.setup_variables.outputs.app }}" "0.0.1-${{github.sha}}-manifestv2" \
-            --set="image.repository=${{secrets.chartmuseum-url}}/${{ needs.setup_variables.outputs.app }}" \
-            --set="image.tag=${{ needs.setup_variables.outputs.imagetag }}" \
-          && helmpush chart "${{secrets.chartmuseum-url}}" --version "0.0.1-${{github.sha}}-manifestv2"
+          manifest generate "${{ needs.setup_variables.outputs.app }}" "0.0.1-${{github.sha}}-manifestv2" --set="image.repository=${{secrets.chartmuseum-url}}/${{ needs.setup_variables.outputs.app }}" --set="image.tag=${{ needs.setup_variables.outputs.imagetag }}" && helmpush chart "${{secrets.chartmuseum-url}}" --version "0.0.1-${{github.sha}}-manifestv2"
 
   # testofskip:
   #   needs: [ "setup_variables", "tests" ]
