--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -20,10 +20,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: sprawdz staging oraz prod sha oraz tag jaki jest aktualnie w flux-prod
-        outputs:
-          prod-digest:
-          current-release-candidate-digest:
-          staging-digest:
+        # outputs:
+        #   prod-digest:
+        #   current-release-candidate-digest:
+        #   staging-digest:
         run: echo "test"
       - name: job
         run: echo job 
