--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -18,14 +18,14 @@ jobs:
           token: ${{ secrets.numa-numa-token }}
           path: flux-prod
         uses: actions/checkout@v4
-
+      - name: job
+        run: env        
       - name: sprawdz staging oraz prod sha oraz tag jaki jest aktualnie w flux-prod
         # outputs:
         #   prod-digest:
         #   current-release-candidate-digest:
         #   staging-digest:
         run: echo "test"
-      - name: job
-        run: echo job 
       - name: porównaj
         run: echo porownalem
+
