--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -19,7 +19,10 @@ jobs:
           path: flux-prod
         uses: actions/checkout@v4
       - name: job
-        run: env        
+        run: env
+      - name: pdf is special
+        if: ${{ github.actions.repository == "pdf" }}
+        run: echo yeah - mom said pdf is special
       - name: sprawdz staging oraz prod sha oraz tag jaki jest aktualnie w flux-prod
         # outputs:
         #   prod-digest:
