--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -19,7 +19,10 @@ jobs:
           path: flux-prod
         uses: actions/checkout@v4
       - name: job
-        run: env
+        run: |
+          env
+          echo _____________________
+          echo ${{ github.actions.repository }}
       - name: pdf is special
         if: ${{ github.actions.repository == 'easir/auth-bff' }}
         run: echo yeah - mom said pdf is special
