--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -22,9 +22,9 @@ jobs:
         run: |
           env
           echo _____________________
-          echo ${{ github.actions.repository }}
+          echo ${{ github.repository }}
       - name: pdf is special
-        if: ${{ github.actions.repository == 'easir/auth-bff' }}
+        if: ${{ github.repository == 'easir/auth-bff' }}
         run: echo yeah - mom said pdf is special
       - name: sprawdz staging oraz prod sha oraz tag jaki jest aktualnie w flux-prod
         # outputs:
