--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -23,6 +23,17 @@ jobs:
           env
           echo _____________________
           echo ${{ github.repository }}
+      - name: get the digests of images
+        run: |
+          repo=$(cat flux-prod/clusters/skoda/staging/helm-$(echo $github.repository | cut -d "/" -f 2).yaml 2>/dev/null | yq '.spec.values.image.repository')
+          tag=$(cat flux-prod/clusters/skoda/staging/helm-$(echo $github.repository | cut -d "/" -f 2).yaml 2>/dev/null | yq '.spec.values.image.tag')
+          prodrepo=$(cat flux-prod/clusters/skoda/production/helm-$(echo $github.repository | cut -d "/" -f 2).yaml 2>/dev/null | yq '.spec.values.image.repository')
+          prodtag=$(cat flux-prod/clusters/skoda/production/helm-$(echo $github.repository | cut -d "/" -f 2).yaml 2>/dev/null | yq '.spec.values.image.tag')
+          current_rc_image=$repo:$(docker buildx imagetools inspect $repo:sad-release-candidate --format "{{json .Manifest}}" | jq -r '.digest | split(":")[1]')
+          next_rc_image=$repo:$(docker buildx imagetools inspect $repo:$tag --format "{{json .Manifest}}" | jq -r '.digest | split(":")[1]')
+          prod_image=$prodrepo:$(docker buildx imagetools inspect $prodrepo:$prodtag --format "{{json .Manifest}}" | jq -r '.digest | split(":")[1]')
+          echo "CURRENT RC $current_rc_image........... NEXT: $next_rc_image .... PROD: $prod_image"
+
       - name: pdf is special
         if: ${{ github.repository == 'easir/pdf' }}
         run: |
@@ -30,7 +41,7 @@ jobs:
           repo=$(cat flux-prod/clusters/skoda/staging/helm-pdf.yaml 2>/dev/null | yq '.spec.values.Image')
           tag=$(cat flux-prod/clusters/skoda/staging/helm-pdf.yaml 2>/dev/null | yq '.spec.values.ImageTag')
           #remove this echo before going real
-          echo docker buildx imagetools create --tag $repo:sad-prod-$epoch $repo:sad-release-candidate
+          #echo docker buildx imagetools create --tag $repo:sad-prod-$epoch $repo:sad-release-candidate
           prodrepo=$(cat flux-prod/clusters/skoda/production/helm-pdf.yaml 2>/dev/null | yq '.spec.values.Image')
           prodtag=$(cat flux-prod/clusters/skoda/production/helm-pdf.yaml 2>/dev/null | yq '.spec.values.ImageTag')
 
