--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -18,12 +18,30 @@ jobs:
           token: ${{ secrets.numa-numa-token }}
           path: flux-prod
         uses: actions/checkout@v4
+      - name: docker login
+        uses: docker/login-action@v3.3.0
+        with:
+          registry: ghcr.io
+          username: easir
+          password: ${{ secrets.numa-numa-token }}
+      - name: Set up Docker Context for Buildx
+        id: buildx-context
+        run: |
+          docker context create builders
+      - name: Docker Setup Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          version: latest
+          endpoint: builders
+          platforms: "linux/arm64,linux/amd64"
+          buildkitd-flags: --debug
       - name: job
         run: |
           env
           echo _____________________
           echo ${{ github.repository }}
       - name: get the digests of images
+        if: ${{ github.repository != 'easir/pdf' }}
         run: |
           repo=$(cat flux-prod/clusters/skoda/staging/helm-$(echo $github.repository | cut -d "/" -f 2).yaml 2>/dev/null | yq '.spec.values.image.repository')
           tag=$(cat flux-prod/clusters/skoda/staging/helm-$(echo $github.repository | cut -d "/" -f 2).yaml 2>/dev/null | yq '.spec.values.image.tag')
