some logging and some tokkking

--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -20,6 +20,7 @@ jobs:
         with:
           repository: easir/flux-prod
           path: flux-prod
+          token: ${{ secrets.numa-numa-token }}
         uses: actions/checkout@v4
       - name: docker login
         env:
