--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -55,10 +55,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.numa-numa-token }}      
         if: ${{ github.repository != 'easir/pdf' }}
         run: |
-          repo=$(cat flux-prod/clusters/skoda/staging/helm-$(echo $github.repository | cut -d "/" -f 2).yaml 2>/dev/null | yq '.spec.values.image.repository')
-          tag=$(cat flux-prod/clusters/skoda/staging/helm-$(echo $github.repository | cut -d "/" -f 2).yaml 2>/dev/null | yq '.spec.values.image.tag')
-          prodrepo=$(cat flux-prod/clusters/skoda/production/helm-$(echo $github.repository | cut -d "/" -f 2).yaml 2>/dev/null | yq '.spec.values.image.repository')
-          prodtag=$(cat flux-prod/clusters/skoda/production/helm-$(echo $github.repository | cut -d "/" -f 2).yaml 2>/dev/null | yq '.spec.values.image.tag')
+          app=$(echo $github.repository | cut -d "/" -f 2)
+          repo=$(cat flux-prod/clusters/skoda/staging/helm-$app.yaml 2>/dev/null | yq '.spec.values.image.repository')
+          tag=$(cat flux-prod/clusters/skoda/staging/helm-$app.yaml 2>/dev/null | yq '.spec.values.image.tag')
+          prodrepo=$(cat flux-prod/clusters/skoda/production/helm-$app.yaml 2>/dev/null | yq '.spec.values.image.repository')
+          prodtag=$(cat flux-prod/clusters/skoda/production/helm-$app.yaml 2>/dev/null | yq '.spec.values.image.tag')
           current_rc_image=$repo:$(docker buildx imagetools inspect $repo:sad-release-candidate --format "{{json .Manifest}}" | jq -r '.digest | split(":")[1]')
           next_rc_image=$repo:$(docker buildx imagetools inspect $repo:$tag --format "{{json .Manifest}}" | jq -r '.digest | split(":")[1]')
           prod_image=$prodrepo:$(docker buildx imagetools inspect $prodrepo:$prodtag --format "{{json .Manifest}}" | jq -r '.digest | split(":")[1]')
