--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -55,6 +55,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.numa-numa-token }}      
         if: ${{ github.repository != 'easir/pdf' }}
         run: |
+          ls -al
+          pwd 
           app=$(echo $github.repository | cut -d "/" -f 2)
           repo=$(cat flux-prod/clusters/skoda/staging/helm-$app.yaml 2>/dev/null | yq '.spec.values.image.repository')
           tag=$(cat flux-prod/clusters/skoda/staging/helm-$app.yaml 2>/dev/null | yq '.spec.values.image.tag')
