--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -59,6 +59,7 @@ jobs:
           pwd 
           app=$(echo $github.repository | cut -d "/" -f 2)
           echo $app
+          ls -al flux-prod
           cat flux-prod/clusters/skoda/staging/helm-$app.yaml | yq '.spec.values.image.repository'
           repo=$(cat flux-prod/clusters/skoda/staging/helm-$app.yaml 2>/dev/null | yq '.spec.values.image.repository')
           tag=$(cat flux-prod/clusters/skoda/staging/helm-$app.yaml 2>/dev/null | yq '.spec.values.image.tag')
