--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -11,7 +11,7 @@ jobs:
     timeout-minutes: 5
     runs-on: ubuntu-latest
     steps:
-      - name: pull code # pull repo apki
+      - name: pull code
         env:
           GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
         uses: actions/checkout@v4
