some more diagnostics

--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -46,6 +46,9 @@ jobs:
       - name: setup outputs uniformly 
         id: tags
         run: |
+          pwd
+          ls -al
+          echo __________________________________________________________
           if [ "${{ github.repository }}" == 'easir/pdf' ]; then
             repo=$(cat flux-prod/clusters/skoda/staging/helm-pdf.yaml 2>/dev/null | yq '.spec.values.Image')
             tag=$(cat flux-prod/clusters/skoda/staging/helm-pdf.yaml 2>/dev/null | yq '.spec.values.ImageTag')
