check the variable

--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -47,6 +47,8 @@ jobs:
         id: tags
         run: |
           app=$(echo ${{ github.repository }} | cut -d "/" -f 2)
+          echo $app
+          echo _________________
           if [ "${{ github.repository }}" == 'easir/pdf' ]; then
             repo=$(cat flux-prod/clusters/skoda/staging/helm-pdf.yaml 2>/dev/null | yq '.spec.values.Image')
             tag=$(cat flux-prod/clusters/skoda/staging/helm-pdf.yaml 2>/dev/null | yq '.spec.values.ImageTag')
