--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -76,5 +76,7 @@ jobs:
           docker buildx imagetools create --tag ${{steps.tags.outputs.current_rc_image}} sad-prod-${{steps.epoch.outputs.epoch}}
   
       - name: move release candidate to next image
+        env:
+          GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
         run: |
           docker buildx imagetools create --tag sad-release-candidate ${{steps.tags.outputs.next_rc_image}}
