--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -743,7 +743,7 @@ jobs:
     timeout-minutes: 5
     needs: [ "setup_variables", "build-image" ]
     runs-on: ${{needs.setup_variables.outputs.runners}}
-    if: inputs.RunSBOM
+    if: ${{ inputs.RunSBOM == 'true' }}
     steps:
       - name: Generate SBOM on Docker image
         uses: anchore/sbom-action@v0.18.0
