--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -529,17 +529,13 @@ jobs:
           manifest generate "${{ needs.setup_variables.outputs.app }}" "0.0.1-${{github.sha}}-manifestv2" --set="image.repository=ghcr.io/easir/${{ needs.setup_variables.outputs.app }}" --set="image.tag=${{ needs.setup_variables.outputs.imagetag }}"
           helmpush chart "${{secrets.chartmuseum-url}}" --version "0.0.1-${{github.sha}}-manifestv2"
 
-  # testofskip:
-  #   needs: [ "setup_variables", "tests" ]
-  #   runs-on: ${{needs.setup_variables.outputs.runners}}
-  #   steps:
-  #     - name: test
-  #       if: |
-  #         always() &&
-  #         !contains(needs.*.result, 'failure') &&
-  #         !contains(needs.*.result, 'canceled') &&
-  #         inputs.SkipImageBuild
-  #       run: echo "dupa"
+  testofskip:
+    needs: [ "setup_variables", "build-image" ]
+    runs-on: ${{needs.setup_variables.outputs.runners}}
+    steps:
+      - name: test
+        if: ${{ inputs.RunSBOM == true }}
+        run: echo "dupa"
 
   build-image:
     timeout-minutes: 30
@@ -743,7 +739,7 @@ jobs:
     timeout-minutes: 5
     needs: [ "setup_variables", "build-image" ]
     runs-on: ${{needs.setup_variables.outputs.runners}}
-    if: ${{ inputs.RunSBOM == 'true' }}
+    if: ${{ inputs.RunSBOM == true }}
     steps:
       - name: Generate SBOM on Docker image
         uses: anchore/sbom-action@v0.18.0
